Fix vertical alignment

--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -35,6 +35,7 @@
 }
 
 .cellValue {
+  align-items: center;
   display: flex;
   height: 100%;
   width: 100%;
